--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body{
     padding:15px;
-    background-color:mintcream ;
+    background-color:azure ;
     font-family:Arial, Helvetica, sans-serif;
 }
 h1{
@@ -13,7 +13,7 @@ input{
 button{
 padding:5px 10px;
 margin-left: 10px;
- background-color: aliceblue;
+ background-color:aqua;
  border:1px solid #787878;
  border-radius: 2px;
 }
